SonarQube remarks processed